--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -76,7 +76,6 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="navigation_drawer_open">Navigationsleiste öffnen</string>
     <string name="navigation_drawer_close">Navigationsleiste schließen</string>
-    <string name="nav_header_title">@string/app_name</string>
     <string name="nav_header_subtitle">Multiboot für Android - mal anders</string>
     <string name="nav_header_desc">Navigations-Header</string>
     <string name="action_settings">Einstellungen</string>
@@ -93,4 +92,10 @@
     <string name="installcheck3">Installationstest #3:</string>
     <string name="superuser">Root:</string>
     <string name="failure">Fehler</string>
+    <string name="about">Über</string>
+    <string name="welcome">Willkommen!</string>
+    <string name="installerWelcome">Willkommen beim Android Boot Manager Installer. Damit wird Android Boot Manager auf Ihrem Gerät installiert. Es werden nicht leicht rückgängig zu machende Änderungen vorgenommen, bitte installieren Sie dies nicht ohne zu wissen was Sie tun. Haftungsausschluss:</string>
+    <string name="next">Weiter</string>
+    <!-- Assistant page navigation -->
+    <string name="prev">Zurück</string>
 </resources>
