--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,9 @@
     <string name="current_rom_name">Current ROM name</string>
     <string name="select_droidboot_title">Select DroidBoot</string>
     <string name="select_droidboot_msg">You will now be asked for the DroidBoot file. Make sure it is the right for your device!</string>
+    <string name="select_droidboot_ok">DroidBoot is selected.</string>
+    <string name="select_droidboot_unzip">This looks like a zip file. You need to extract lk.img!</string>
+    <string name="select_droidboot_invalid">That does not look like an DroidBoot!</string>
     <string name="sure_title">Are you sure?</string>
     <string name="sure_msg">If you now press OK, ABM will install. This the last confirmation!</string>
     <string name="choose_device">Choose your device</string>
@@ -107,4 +110,5 @@
     <string name="next">Next</string>
     <!-- Assistant page navigation -->
     <string name="prev">Prev</string>
+    <string name="help">Help</string>
 </resources>
