--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,10 @@
 
     <string name="app_name">Android Boot Manager</string>
     <string name="fatal">FATAL ERROR</string>
+    <string name="about_txt_1">Founded by Luka Panio &amp; nift4</string>
+    <string name="about_txt_2">    App Development: nift4</string>
+    <string name="about_txt_3">    DroidBoot development: Luka Panio</string>
+    <string name="about_txt_4">    Thanks to Volla &amp; F(x)tec for developer devices</string>
     <string name="cp_err_msg">Failed to extract some data. Did you install the app on a SD card? Pressing OK will take you to the app, do not do anything without investigating first!</string>
     <string name="wrong_device_title">Wrong device</string>
     <string name="wrong_device_msg">Android Boot Manager is not available for this device (%1$s).</string>
@@ -16,6 +20,7 @@
     <string name="installing_title">Installing…</string>
     <string name="installing_msg">Installing. Please wait…</string>
     <string name="current_rom_name">Current ROM name</string>
+    <string name="bootset_fail">ATTENTION! Failed to mount bootset! Please check logs and do not touch stuff!</string>
     <string name="select_droidboot_title">Select DroidBoot</string>
     <string name="select_droidboot_msg">You will now be asked for the DroidBoot file. Make sure it is the right for your device!</string>
     <string name="select_droidboot_ok">DroidBoot is selected.</string>
