--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -2,6 +2,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="app_name">Android Boot Manager</string>
     <string name="fatal">SCHWERWIEGENDER FEHLER</string>
+    <string name="about_txt_1">Founded by Luka Panio &amp; nift4</string>
+    <string name="about_txt_2">    App Development: nift4</string>
+    <string name="about_txt_3">    DroidBoot development: Luka Panio</string>
+    <string name="about_txt_4">    Thanks to Volla &amp; F(x)tec for developer devices</string>
     <string name="cp_err_msg">Fehler beim Extrahieren der Daten. Haben Sie die App auf einer SD-Karte installiert? Das Drücken von OK bringt Sie zur App, tun Sie nichts ohne den Fehler vorher zu untersuchen!</string>
     <string name="wrong_device_title">Inkompatibles Gerät</string>
     <string name="wrong_device_msg">Die Android-Startverwaltung ist für dieses Gerät (%1$s) nicht verfügbar.</string>
@@ -15,6 +19,7 @@
     <string name="installing_title">Installiere…</string>
     <string name="installing_msg">Installiere, bitte warten…</string>
     <string name="current_rom_name">Name des installierten ROMs</string>
+    <string name="bootset_fail">ATTENTION! Failed to mount bootset! Please check logs and do not touch stuff!</string>
     <string name="select_droidboot_title">DroidBoot auswählen</string>
     <string name="select_droidboot_msg">Du wirst nun nach der DroidBoot-Datei gefragt. Stelle sicher, dass sie die richtige für dein Gerät ist!</string>
     <string name="select_droidboot_ok">DroidBoot ist ausgewählt.</string>
@@ -86,8 +91,11 @@
     <string name="nav_header_desc">Navigations-Header</string>
     <string name="action_settings">Einstellungen</string>
     <string name="menu_home">Startseite</string>
-    <string name="menu_gallery">Galerie</string>
-    <string name="menu_slideshow">Diashow</string>
+    <string name="menu_roms">ROMs</string>
+    <string name="menu_sd">SD-Karte</string>
+    <string name="menu_generalcfg">Allgemeine Einstellungen</string>
+    <string name="wizard_updatelk_intro">Sie sind dabei, den Bootloader zu aktualisieren.</string>
+    <string name="aboutLibraries">Über die Bibliotheken</string>
     <string name="home_installedWorking_img">Checkmark um den installierten Zustand darzustellen</string>
     <string name="home_installedWorking_text">Fehler beim Laden des Status</string>
     <string name="home_installedWorking_ok">Installiert &amp; funktioniert</string>
