--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -2,6 +2,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="app_name">Android Boot Manager</string>
     <string name="fatal">ERRORE FATALE</string>
+    <string name="about_txt_1">Founded by Luka Panio &amp; nift4</string>
+    <string name="about_txt_2">    App Development: nift4</string>
+    <string name="about_txt_3">    DroidBoot development: Luka Panio</string>
+    <string name="about_txt_4">    Thanks to Volla &amp; F(x)tec for developer devices</string>
     <string name="cp_err_msg">Impossibile estrarre alcuni dati. Hai installato l\'app su una scheda SD? Premere OK ti porterà all\'app, non fare nulla senza prima indagare!</string>
     <string name="wrong_device_title">Dispositivo errato</string>
     <string name="wrong_device_msg">Android Boot Manager non è disponibile per questo dispositivo (%1$s).</string>
@@ -15,6 +19,7 @@
     <string name="installing_title">Installazione…</string>
     <string name="installing_msg">Installazione. Per favore attendi…</string>
     <string name="current_rom_name">Nome della ROM attuale</string>
+    <string name="bootset_fail">ATTENTION! Failed to mount bootset! Please check logs and do not touch stuff!</string>
     <string name="select_droidboot_title">Seleziona DroidBoot</string>
     <string name="select_droidboot_msg">Ti verrà chiesto di selezionare il file DroidBoot. Assicurati che sia corretto per il tuo dispositivo!</string>
     <string name="select_droidboot_ok">DroidBoot is selected.</string>
@@ -87,8 +92,11 @@ se falsifichi il fingerprint)</string>
     <string name="nav_header_desc">Header di navigazione</string>
     <string name="action_settings">Impostazioni</string>
     <string name="menu_home">Pagina principale</string>
-    <string name="menu_gallery">Galleria</string>
-    <string name="menu_slideshow">Presentazione</string>
+    <string name="menu_roms">ROMs</string>
+    <string name="menu_sd">SD card</string>
+    <string name="menu_generalcfg">General settings</string>
+    <string name="wizard_updatelk_intro">You are about to update the bootloader.</string>
+    <string name="aboutLibraries">About Libraries</string>
     <string name="home_installedWorking_img">Checkmark/Croce per rappresentare stato di installazione</string>
     <string name="home_installedWorking_text">Impossibile caricare lo stato</string>
     <string name="home_installedWorking_ok">&amp; installato, funziona</string>
