--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -2,11 +2,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="app_name">Менеджер завантаження Android</string>
     <string name="fatal">КРИТИЧНА ПОМИЛКА</string>
+    <string name="about_txt_1">Founded by Luka Panio &amp; nift4</string>
+    <string name="about_txt_2">    App Development: nift4</string>
+    <string name="about_txt_3">    DroidBoot development: Luka Panio</string>
+    <string name="about_txt_4">    Thanks to Volla &amp; F(x)tec for developer devices</string>
     <string name="cp_err_msg">Не вдалося розархівувати деякі дані. Ви встановили додаток на SD-карту? Натискання \"ОК\" перенаправить вас до застосунку, нічого не робити без попереднього виправлення проблеми!</string>
     <string name="wrong_device_title">Неправильний пристрій</string>
     <string name="wrong_device_msg">Android Boot Manager не доступний для цього приладу (%1$s).</string>
-    <string name="device_msg">Android Boot Manager is available for this device (%1$s).</string>
-    <string name="device_btn">Not your device?</string>
+    <string name="device_msg">Android Boot Manager не доступний для цього приладу (%1$s).</string>
+    <string name="device_btn">Не той пристрій?</string>
     <string name="bsp_msg">Your device uses an BSP codename (%1$s). That means we are not able to identify your device and you need to select yours.</string>
     <string name="allow_install_unchecked_title">Інсталяція не дозволена</string>
     <string name="allow_install_unchecked_msg">Здається, що ви не прочитали інструкцію на сторінці. Це не добре!</string>
@@ -15,11 +19,12 @@
     <string name="installing_title">Інсталяція…</string>
     <string name="installing_msg">Встановлення. Будь ласка, зачекайте…</string>
     <string name="current_rom_name">Ім\'я поточної прошивки</string>
+    <string name="bootset_fail">ATTENTION! Failed to mount bootset! Please check logs and do not touch stuff!</string>
     <string name="select_droidboot_title">Виберіть DroidBoot</string>
     <string name="select_droidboot_msg">Ви повинні вибрати DroidBoot файл. Перевірте чи він для вашого пристрою!</string>
-    <string name="select_droidboot_ok">DroidBoot is selected.</string>
-    <string name="select_droidboot_unzip">This looks like a zip file. You need to extract lk.img!</string>
-    <string name="select_droidboot_invalid">That does not look like an DroidBoot!</string>
+    <string name="select_droidboot_ok">DroidBoot обрано.</string>
+    <string name="select_droidboot_unzip">Це схоже на zip-файл. Ви повинні розпакувати lk.img!</string>
+    <string name="select_droidboot_invalid">Це не схоже на DroidBoot!</string>
     <string name="sure_title">Ви впевнені?</string>
     <string name="sure_msg">Якщо ви натиснете ОК, ABM буде встановлено. Остання перевірка!</string>
     <string name="choose_device">Виберіть ваш пристрій</string>
@@ -70,11 +75,11 @@
     <string name="updated">Я оновив свою основну прошивку</string>
     <string name="rom_type_add_ut_sysimg_halium_rootfs">Ubuntu Touch (System image, Halium Boot image, Rootfs)</string>
     <string name="rom_type_add_ut_sysimg_halium">Ubuntu Touch (System image, Halium Boot image)</string>
-    <string name="install_ut_halium_boot_systemimage">You are going to install ubuntu touch, using system image and halium boot. Are you sure?</string>
+    <string name="install_ut_halium_boot_systemimage">Ви збираєтеся встановити Ubuntu Touch, використовуючи образ sytem і halium-boot, ви впевнені?</string>
     <string name="select_halium_boot">Будь ласка, виберіть файл halium-boot</string>
     <string name="select_system_image">Будь ласка, виберіть system.img</string>
     <string name="enter_rom_name">Введіть ім\'я прошивки</string>
-    <string name="install_ut_halium_boot_systemimage_rootfs">You are going to install ubuntu touch, using system image, rootfs and halium boot. Are you sure?</string>
+    <string name="install_ut_halium_boot_systemimage_rootfs">Ви збираєтеся встановити Ubuntu Touch, використовуючи образ sytem, rootfs і halium-boot, ви впевнені?</string>
     <string name="select_rootfs">Будь ласка виберіть rootfs</string>
     <string name="install_sailfish">Ви збираєтеся встановити SailfishOS, використовуючи zip. Ви впевнені?</string>
     <string name="select_sfos_zip">Будь ласка, виберіть zip SailfishOS</string>
@@ -86,24 +91,27 @@
     <string name="nav_header_desc">Заголовок панелі навігації</string>
     <string name="action_settings">Налаштування</string>
     <string name="menu_home">Головна</string>
-    <string name="menu_gallery">Галерея</string>
-    <string name="menu_slideshow">Слайд-шоу</string>
+    <string name="menu_roms">ROMs</string>
+    <string name="menu_sd">SD card</string>
+    <string name="menu_generalcfg">General settings</string>
+    <string name="wizard_updatelk_intro">You are about to update the bootloader.</string>
+    <string name="aboutLibraries">About Libraries</string>
     <string name="home_installedWorking_img">Позначка представляють інстальований стан</string>
     <string name="home_installedWorking_text">Не вдалося завантажити стан</string>
     <string name="home_installedWorking_ok">Встановлено &amp; робота</string>
     <string name="home_installedWorking_no">Не встановлено</string>
-    <string name="loading">Loading…</string>
-    <string name="installcheck1">Install check #1:</string>
-    <string name="installcheck2">Install check #2:</string>
-    <string name="installcheck3">Install check #3:</string>
+    <string name="loading">Завантаження…</string>
+    <string name="installcheck1">Встановлення перевірка #1:</string>
+    <string name="installcheck2">Встановлення перевірка #2:</string>
+    <string name="installcheck3">Встановлення перевірка #3:</string>
     <string name="superuser">Root:</string>
-    <string name="failure">Failure</string>
-    <string name="about">About</string>
-    <string name="welcome">Welcome!</string>
-    <string name="wizard_deviceinstaller_text">Ready! Please follow the next steps for installing Android Boot Manager. If you redecided, you can click cancel. Nothing was changed until now.</string>
+    <string name="failure">Помилка</string>
+    <string name="about">Про програму</string>
+    <string name="welcome">Ласкаво просимо!</string>
+    <string name="wizard_deviceinstaller_text">Готово! Будь ласка, виконайте наступні кроки до встановлення Android Boot Manager. Якщо ви передумали, натисніть кнопку \"Скасувати\". До цього часу нічого не змінилося.</string>
     <string name="installerWelcome">Welcome to the Android Boot Manager installer. This will install Android Boot Manager on your device. Not easily undoable modifications are being done, please do not install without knowledge about it. Disclaimer follows:</string>
-    <string name="next">Next</string>
+    <string name="next">Наступний</string>
     <!-- Assistant page navigation -->
-    <string name="prev">Prev</string>
+    <string name="prev">Попередній</string>
     <string name="help">Help</string>
 </resources>
