--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -88,7 +88,7 @@ se falsifichi il fingerprint)</string>
     <string name="title_activity_main">Attività principale</string>
     <string name="navigation_drawer_open">Apri menù di navigazione</string>
     <string name="navigation_drawer_close">Chiudi menù di navigazione</string>
-    <string name="nav_header_subtitle">Multiboot per Android - l\'altra via</string>
+    <string name="nav_header_subtitle">One phone to start them all!</string>
     <string name="nav_header_desc">Header di navigazione</string>
     <string name="action_settings">Impostazioni</string>
     <string name="menu_home">Pagina principale</string>
@@ -96,6 +96,7 @@ se falsifichi il fingerprint)</string>
     <string name="menu_sd">SD card</string>
     <string name="menu_generalcfg">General settings</string>
     <string name="wizard_updatelk_intro">You are about to update the bootloader.</string>
+    <string name="wizard_addrom_intro">You are about to install an ROM to the SD card.</string>
     <string name="aboutLibraries">About Libraries</string>
     <string name="home_installedWorking_img">Checkmark/Croce per rappresentare stato di installazione</string>
     <string name="home_installedWorking_text">Impossibile caricare lo stato</string>
@@ -107,6 +108,9 @@ se falsifichi il fingerprint)</string>
     <string name="installcheck3">Install check #3:</string>
     <string name="superuser">Root:</string>
     <string name="failure">Errore</string>
+    <string name="unknown_os">Unknown OS</string>
+    <string name="ut">Ubuntu Touch</string>
+    <string name="android">Android</string>
     <string name="about">Informazioni</string>
     <string name="welcome">Welcome!</string>
     <string name="wizard_deviceinstaller_text">Ready! Please follow the next steps for installing Android Boot Manager. If you redecided, you can click cancel. Nothing was changed until now.</string>
@@ -115,4 +119,26 @@ se falsifichi il fingerprint)</string>
     <!-- Assistant page navigation -->
     <string name="prev">Prev</string>
     <string name="help">Help</string>
+    <string name="unknown_part">Unknown partition type</string>
+    <string name="sd_mbr">This SD card uses the legacy MBR partition scheme but GPT is required. However, it can be converted to GPT. But this may cause data loss, therefore please backup your data.</string>
+    <string name="sd_err">Unknown error.</string>
+    <string name="convert">Convert</string>
+    <string name="failed">Failed</string>
+    <string name="successful">Successful</string>
+    <string name="free_space">Free space</string>
+    <string name="partid">Partition %1$d labeled \"%2$s\"</string>
+    <string name="create">Create</string>
+    <string name="sector_range">Sector range</string>
+    <string name="label">Label</string>
+    <string name="size">Size</string>
+    <string name="free_space_size">Free space of size %1$s</string>
+    <string name="start_sector">Start Sector</string>
+    <string name="end_sector">End Sector</string>
+    <string name="adopted_part">Adopted Storage</string>
+    <string name="meta_part">ABM/Adopted Storage Metadata</string>
+    <string name="portable_part">Portable Storage</string>
+    <string name="system_part">OS System data</string>
+    <string name="data_part">OS User data</string>
+    <!-- How an partition is used -->
+    <string name="usage">Usage</string>
 </resources>
