--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -2,16 +2,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="app_name">Android Önyükleme Yöneticisi</string>
     <string name="fatal">KRİTİK HATA</string>
-    <string name="about_txt_1">Founded by Luka Panio &amp; nift4</string>
-    <string name="about_txt_2">    App Development: nift4</string>
-    <string name="about_txt_3">    DroidBoot development: Luka Panio</string>
-    <string name="about_txt_4">    Thanks to Volla &amp; F(x)tec for developer devices</string>
-    <string name="cp_err_msg">Failed to extract some data. Did you install the app on a SD card? Pressing OK will take you to the app, do not do anything without investigating first!</string>
+    <string name="about_txt_1">Luka Panio &amp; nift4 tarafından kurulmuştur</string>
+    <string name="about_txt_2">    Uygulama Geliştiricisi: nift4</string>
+    <string name="about_txt_3">    DroidBoot geliştirmesi: Luka Panio</string>
+    <string name="about_txt_4">    Geliştirici cihazları için Volla &amp; F(x)tec teşekkür ederiz</string>
+    <string name="cp_err_msg">Bazı verileri çıkarmada başarısız olundu. Uygulamayı SD Karta mı yüklediniz? Tamam\'a basmak sizi uygulamaya yönderirir, ancak sorunu çözmeden bir şey yapmayın!</string>
     <string name="wrong_device_title">Yanlış Cihaz</string>
     <string name="wrong_device_msg">Android Önyükleme Yöneticisi bu cihaz için kullanılabilir değil (%1$s).</string>
-    <string name="device_msg">Android Boot Manager is available for this device (%1$s).</string>
-    <string name="device_btn">Not your device?</string>
-    <string name="bsp_msg">Your device uses an BSP codename (%1$s). That means we are not able to identify your device and you need to select yours.</string>
+    <string name="device_msg">Android Boot Manager bu cihaz için kullanılabilir (%1$s).</string>
+    <string name="device_btn">Cihazınız bu değil mi?</string>
+    <string name="bsp_msg">Cihazınız BSP kod adını kullanmaktadır (%1$s). Bundan dolayı cihazınızı tanımakta güçlük çekiyoruz lütfen kendi cihazınızı kendiniz seçiniz.</string>
     <string name="allow_install_unchecked_title">Yüklemeye izin ver kutusunu işaretlemediniz</string>
     <string name="allow_install_unchecked_msg">Görünüşe göre bu sayfaya bakmadınız. Bu iyi değil!</string>
     <string name="ok">Tamam</string>
@@ -19,12 +19,12 @@
     <string name="installing_title">Yükleniyor…</string>
     <string name="installing_msg">Yükleniyor. Lütfen bekleyiniz…</string>
     <string name="current_rom_name">Geçerli ROM ismi</string>
-    <string name="bootset_fail">ATTENTION! Failed to mount bootset! Please check logs and do not touch stuff!</string>
+    <string name="bootset_fail">DİKKAT! Bootset bağlanırken hata oluştu! Hata günlüklerini kontrol edin ve hiç bir ayarla oynamayın!</string>
     <string name="select_droidboot_title">DroidBoot\'u seçin</string>
     <string name="select_droidboot_msg">Birazdan DroidBoot dosyası isteyenecektir. Doğruyu seçtiğinizden emin olun!</string>
-    <string name="select_droidboot_ok">DroidBoot is selected.</string>
-    <string name="select_droidboot_unzip">This looks like a zip file. You need to extract lk.img!</string>
-    <string name="select_droidboot_invalid">That does not look like an DroidBoot!</string>
+    <string name="select_droidboot_ok">DroidBoot seçildi.</string>
+    <string name="select_droidboot_unzip">Zip dosyası gibi görünüyor. lk.img dosyasını çıkartmanız gerekiyor!</string>
+    <string name="select_droidboot_invalid">Bu DroidBoot\'a benzemiyor!</string>
     <string name="sure_title">Emin misiniz?</string>
     <string name="sure_msg">Tamama basarsanız, ABM yüklenecektir. Bu son uyarıdır!</string>
     <string name="choose_device">Cihazınızı seçiniz</string>
@@ -75,43 +75,69 @@
     <string name="updated">Ben ana ROM\'umu güncelledim</string>
     <string name="rom_type_add_ut_sysimg_halium_rootfs">Ubuntu Touch (System imajı, Halium Boot imajı, Rootfs)</string>
     <string name="rom_type_add_ut_sysimg_halium">Ubuntu Touch (System imajı, Halium Boot imajı)</string>
-    <string name="install_ut_halium_boot_systemimage">You are going to install ubuntu touch, using system image and halium boot. Are you sure?</string>
-    <string name="select_halium_boot">Please select halium boot file</string>
-    <string name="select_system_image">Please select systemimage</string>
-    <string name="enter_rom_name">Enter ROM name</string>
-    <string name="install_ut_halium_boot_systemimage_rootfs">You are going to install ubuntu touch, using system image, rootfs and halium boot. Are you sure?</string>
-    <string name="select_rootfs">Please select rootfs</string>
-    <string name="install_sailfish">You are going to install SailfishOS, using zip. Are you sure?</string>
-    <string name="select_sfos_zip">Please select SailfishOS zip</string>
+    <string name="install_ut_halium_boot_systemimage">Sistem imajı ve halium boot kullanarak, ubuntu touch yüklemek üzeresiniz. Devam etmekten emin misiniz?</string>
+    <string name="select_halium_boot">Lütfen halium boot dosyasını seçin</string>
+    <string name="select_system_image">Lütfen sistem imajını seçin</string>
+    <string name="enter_rom_name">ROM adını girin</string>
+    <string name="install_ut_halium_boot_systemimage_rootfs">Sistem imajı, rootfs ve halium boot kullanarak ubuntu touch yüklemek üzeresiniz. Devam etmekten emin misiniz?</string>
+    <string name="select_rootfs">Lütfen rootfs seçiniz</string>
+    <string name="install_sailfish">Zip kullanarak SailfishOS yüklemek üzeresiniz. Emin misiniz?</string>
+    <string name="select_sfos_zip">Lütfen SailfishOS zipi seçiniz</string>
     <string name="rom_type_add_sailfish">Sailfish OS</string>
-    <string name="title_activity_main">MainActivity</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_subtitle">Multiboot for Android - the other way</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
-    <string name="menu_home">Home</string>
-    <string name="menu_roms">ROMs</string>
-    <string name="menu_sd">SD card</string>
-    <string name="menu_generalcfg">General settings</string>
-    <string name="wizard_updatelk_intro">You are about to update the bootloader.</string>
-    <string name="aboutLibraries">About Libraries</string>
-    <string name="home_installedWorking_img">Checkmark/Cross to represent installed state</string>
-    <string name="home_installedWorking_text">Failed to load state</string>
-    <string name="home_installedWorking_ok">Installed &amp; working</string>
-    <string name="home_installedWorking_no">Not installed</string>
-    <string name="loading">Loading…</string>
-    <string name="installcheck1">Install check #1:</string>
-    <string name="installcheck2">Install check #2:</string>
-    <string name="installcheck3">Install check #3:</string>
+    <string name="title_activity_main">AnaAktivite</string>
+    <string name="navigation_drawer_open">Gezinti çekmecesini aç</string>
+    <string name="navigation_drawer_close">Gezinti çekmecesini kapat</string>
+    <string name="nav_header_subtitle">One phone to start them all!</string>
+    <string name="nav_header_desc">Gezinti başlığı</string>
+    <string name="action_settings">Ayarlar</string>
+    <string name="menu_home">Ana Sayfa</string>
+    <string name="menu_roms">ROMlar</string>
+    <string name="menu_sd">SD kart</string>
+    <string name="menu_generalcfg">Genel ayarlar</string>
+    <string name="wizard_updatelk_intro">Bootloader\'ınızı güncellemek üzeresiniz.</string>
+    <string name="wizard_addrom_intro">You are about to install an ROM to the SD card.</string>
+    <string name="aboutLibraries">Kütüphaneler Hakkında</string>
+    <string name="home_installedWorking_img">Yükleme durumu teyit etmek için Tik/Çarpı</string>
+    <string name="home_installedWorking_text">Kayıtlı durum yüklenemedi</string>
+    <string name="home_installedWorking_ok">Yüklendi &amp; çalışıyor</string>
+    <string name="home_installedWorking_no">Yüklü değil</string>
+    <string name="loading">Yükleniyor…</string>
+    <string name="installcheck1">Yükleme kontrolü #1:</string>
+    <string name="installcheck2">Yükleme kontrolü #2:</string>
+    <string name="installcheck3">Yükleme kontrolü #3:</string>
     <string name="superuser">Root:</string>
-    <string name="failure">Failure</string>
-    <string name="about">About</string>
-    <string name="welcome">Welcome!</string>
-    <string name="wizard_deviceinstaller_text">Ready! Please follow the next steps for installing Android Boot Manager. If you redecided, you can click cancel. Nothing was changed until now.</string>
-    <string name="installerWelcome">Welcome to the Android Boot Manager installer. This will install Android Boot Manager on your device. Not easily undoable modifications are being done, please do not install without knowledge about it. Disclaimer follows:</string>
-    <string name="next">Next</string>
+    <string name="failure">Başarısız</string>
+    <string name="unknown_os">Unknown OS</string>
+    <string name="ut">Ubuntu Touch</string>
+    <string name="android">Android</string>
+    <string name="about">Hakkında</string>
+    <string name="welcome">Hoşgeldiniz!</string>
+    <string name="wizard_deviceinstaller_text">Hazır! Android Boot Manager yüklemek için adımları takip edin. Eğer fikrinizi değiştirirseniz iptale basabilirsiniz. Şimdiye kadar hiç bir şey değiştirilmedi.</string>
+    <string name="installerWelcome">Android Boot Manager yükleyicisine hoş geldiniz. Bu araç Android Boot Manager\'ı cihazınıza yükleyecektir. Yaptığınız bazı düzenlemeler kolayca geri alınamayabilir, lütfen bilmiyorsanız kullanmayınız. Sorumluluk reddi beyanı şu şekildedir:</string>
+    <string name="next">İleri</string>
     <!-- Assistant page navigation -->
-    <string name="prev">Prev</string>
-    <string name="help">Help</string>
+    <string name="prev">Geri</string>
+    <string name="help">Yardım</string>
+    <string name="unknown_part">Unknown partition type</string>
+    <string name="sd_mbr">This SD card uses the legacy MBR partition scheme but GPT is required. However, it can be converted to GPT. But this may cause data loss, therefore please backup your data.</string>
+    <string name="sd_err">Unknown error.</string>
+    <string name="convert">Convert</string>
+    <string name="failed">Failed</string>
+    <string name="successful">Successful</string>
+    <string name="free_space">Free space</string>
+    <string name="partid">Partition %1$d labeled \"%2$s\"</string>
+    <string name="create">Create</string>
+    <string name="sector_range">Sector range</string>
+    <string name="label">Label</string>
+    <string name="size">Size</string>
+    <string name="free_space_size">Free space of size %1$s</string>
+    <string name="start_sector">Start Sector</string>
+    <string name="end_sector">End Sector</string>
+    <string name="adopted_part">Adopted Storage</string>
+    <string name="meta_part">ABM/Adopted Storage Metadata</string>
+    <string name="portable_part">Portable Storage</string>
+    <string name="system_part">OS System data</string>
+    <string name="data_part">OS User data</string>
+    <!-- How an partition is used -->
+    <string name="usage">Usage</string>
 </resources>
